mobile overflow bug fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: $white;
-  overflow-x: hidden; //Set to hidden so you cant scroll horizontally because of the big green circle
+  // overflow-x: hidden; 
   width: 100vw;
   height: 100vh;
 }
@@ -29,6 +29,11 @@ h3,
 h4,
 h5 {
   font-family: 'Red Hat Text', sans-serif;
+}
+
+.overflow {
+  overflow-x: hidden;
+  position: relative;
 }
 
 /* Specific CSS that is used on multiple pages
